--- a/about/index.html
+++ b/about/index.html
@@ -17,11 +17,11 @@
 			<div class="container">
 			
 			{{ content }}
-			<body>
+			<!--<body>
         			<h1> This is a header! </h1>
         			<p>This is the paragraph.</p>
-      			</body>
-      
+      			</body>-->
+      			
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
