--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Devon Bridgeman Personal Site
 ---
 <div class="blurb">
-	<h1>Devon Bridgem</h1>
+	<h1>Devon Bridgeman</h1>
 	<p>Data Scientist</a></p>
 </div><!-- /.blurb -->
