--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Devon Bridgeman Personal Site
+title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Devon Bridgeman</h1>
