--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,3 @@
-layout: defualt
-
 <!DOCTYPE html>
 	<html>
 		<head>
@@ -9,6 +7,9 @@ layout: defualt
       
 		</head>
 		<body>
+			<h1>
+				Devon Bridgeman
+			</h1>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
