--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,9 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<h1>
+				Devon Bridgeman
+			</h1
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
