--- a/projects/index.html
+++ b/projects/index.html
@@ -1,35 +1,8 @@
-<!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<h1>
-				Devon Bridgeman
-			</h1
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/resume">Resume</a></li>
-	        		<li><a href="/projects">Projects</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			<!--<body>
-        			<h1> Projects </h1>
-        			<p>This is the paragraph.</p>
-      			</body>-->
-      			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:DevonBridgeman3@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/dbridgem">github.com/dbridgem</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+---
+layout: default
+title: Devon Bridgeman
+---
+<div class="blurb">
+	<h1>Devon Bridgeman</h1>
+	<p>Data Scientist</a></p>
+</div><!-- /.blurb -->
