--- a/projects/index.html
+++ b/projects/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Devon Bridgeman
 ---
 <div class="blurb">
-	<h1>Devon Bridgeman</h1>
-	<p>Data Scientist</a></p>
+	<h1>Projects</h1>
+	<p>Here is a brief summary of a few projects I've done.</a></p>
+
 </div><!-- /.blurb -->
