--- a/projects/index.html
+++ b/projects/index.html
@@ -5,5 +5,10 @@ title: Devon Bridgeman
 <div class="blurb">
 	<h1>Projects</h1>
 	<p>Here is a brief summary of a few projects I've done.</a></p>
-
 </div><!-- /.blurb -->
+
+<div class="project">
+	<h2>Nature Scraping</h2>
+	<p>img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
+	<p style = "margin-top: 20px;"></p>
+	<p>Text to the right of the image</p>
