--- a/projects/index.html
+++ b/projects/index.html
@@ -12,3 +12,4 @@ title: Devon Bridgeman
 	<p>img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
 	<p style = "margin-top: 20px;"></p>
 	<p>Text to the right of the image</p>
+</div>
