--- a/projects/index.html
+++ b/projects/index.html
@@ -9,6 +9,6 @@ title: Devon Bridgeman
 
 <div class="project">
 	<h2>Nature Scraping</h2>
-	<p><img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
-	<p>Text to the right of the image</p>
+	<p><img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	Text to the right of the image</p>
 </div>
