--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Devon Bridgeman
 ---
+.project {
+  overflow: auto;
+}
+
 <div class="blurb">
 	<h1>Projects</h1>
 	<p>Here is a brief summary of a few projects I've done.</a></p>
@@ -10,5 +14,6 @@ title: Devon Bridgeman
 <div class="project">
 	<h2>Nature Scraping</h2>
 	<p><img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
-	Text to the right of the image</p>
+		<p-styleoverflow: auto;
+	Discription of the Project</p>
 </div>
