--- a/projects/index.html
+++ b/projects/index.html
@@ -2,9 +2,11 @@
 layout: default
 title: Devon Bridgeman
 ---
+<style>
 .project {
   overflow: auto;
 }
+</style>
 
 <div class="blurb">
 	<h1>Projects</h1>
