--- a/projects/index.html
+++ b/projects/index.html
@@ -3,6 +3,12 @@ layout: default
 title: Devon Bridgeman
 ---
 <style>
+	
+div .project{
+  border: 3px solid #4CAF50;
+  padding: 5px;
+}	
+	
 .project {
   overflow: auto;
 }
