--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@ p .project{
 
 <div class="project">
 	<h2>Nature Scraping</h2>
-	<p><img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: right," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	Some stuff about the Nature Scraping project.t</p>
 </div>
 
