--- a/projects/index.html
+++ b/projects/index.html
@@ -25,24 +25,24 @@ p .project{
 
 <div class="project">
 	<h2>Nature Scraping</h2>
-	<p><img style = "padding: 0 15px; float: right," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
+	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
 	<p>Some stuff about the Nature Scraping project.</p>
 </div>
 
 <div class="project">
 	<h2>CNN for Sensor Quality Control</h2>
-	<p><img style = "padding: 0 15px; float: right," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	Stuff about CNN project</p>
 </div>
 
 <div class="project">
 	<h2>Animated Bar Graph Generator</h2>
-	<p><img style = "padding: 0 15px; float: left," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	Stuff about Animated Bar Graph Generator project</p>
 </div>
 
 <div class="project">
 	<h2>Baseline Tracking Comparison</h2>
-	<p><img style = "padding: 0 15px; float: right," img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	Stuff about Baseline Tracking Comparison project</p>
 </div>
