--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,8 @@ title: Devon Bridgeman
 	
 div .project{
   border: 3px solid #4CAF50;
-  padding: 15px;
+  padding: 5px;
+  margin: 10px;
 }	
 	
 .project {
@@ -22,6 +23,8 @@ p .project{
 	<h1>Projects</h1>
 	<p>Here is a brief summary of a few projects I've done.</a></p>
 </div><!-- /.blurb -->
+
+<div class="space">
 
 <div class="project">
 	<h2>Nature Scraping</h2>
