--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,8 @@ p .project{
 
 <div class="project">
 	<h2>Nature Scraping</h2>
+	<iframe width="300" height="300" src="https://youtu.be/KNJ-Nv17IgQ" style="float:left">
+	</iframe>
 	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/></p>
 	<p>Some stuff about the Nature Scraping project.</p>
 </div>
