--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@ p .project{
 
 <div class="project">
 	<h2>Nature Scraping</h2>
-	<iframe width="300" height="300" style="float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+	<iframe width="300" height="300" style="padding: 0 15px; float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 	</iframe>
 	<p>Some stuff about the Nature Scraping project.</p>
 </div>
