--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,8 @@ div .project{
 p .project{
    margin-style = top-middle;
    text-overflow: ellipsis;
+   flex: 1;
+   white-space: nowrap;
 }
 </style>
 
