--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,12 @@ div .project{
 
 p .project{
    margin-style = top-middle;
-   text-overflow: ellipsis;
    flex: 1;
    white-space: nowrap;
+   width: 500px; 
+   height: 300px;
+   overflow: hidden;
+   text-overflow: ellipsis; 	
 }
 </style>
 
