--- a/projects/index.html
+++ b/projects/index.html
@@ -36,16 +36,11 @@ p .project{
 	<h2>Nature Scraping</h2>
 	<iframe width="300" height="300" style="padding: 0 15px; float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 	</iframe>
-	<p>Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project. 
-		Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project.
-	Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project. 
-		Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project.
-	Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project. 
-		Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project.
-	Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project. 
-		Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project.
-	Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project. 
-		Some stuff about the Nature Scraping project. Some stuff about the Nature Scraping project.</p>
+	<p>In this project I was curious to see what some of the trends in popular topics in scientific literature over time were. Since Nature
+	is a top journal and has been publishing for a very long time, it was a perfect candidate. Using Beautiful Soup 4 in Python, I was
+	able to scrape the entirety of the journal archives and  with a few other Python scripts I was able to extract the frequency of different
+	words used over time. What I found was that in earlier years (around 1900), the literature was much more diverse in topics, and 
+	recently we start to see the same popular terms. It's not really a surprise when you think about it, but still interesting.</p>
 </div>
 
 <div class="project">
