--- a/projects/index.html
+++ b/projects/index.html
@@ -40,7 +40,9 @@ p .project{
 	is a top journal and has been publishing for a very long time, it was a perfect candidate. Using Beautiful Soup 4 in Python, I was
 	able to scrape the entirety of the journal archives and  with a few other Python scripts I was able to extract the frequency of different
 	words used over time. What I found was that in earlier years (around 1900), the literature was much more diverse in topics, and 
-	recently we start to see the same popular terms. It's not really a surprise when you think about it, but still interesting.</p>
+	recently we start to see the same popular terms. It's not really a surprise when you think about it, but still interesting.
+	Here is an animated plot showing some of the top terms over time. <a href="/nature_scraper"> Click here to read more </a></p>
+	
 </div>
 
 <div class="project">
