--- a/projects/index.html
+++ b/projects/index.html
@@ -53,8 +53,12 @@ p .project{
 
 <div class="project">
 	<h2>Animated Bar Graph Generator</h2>
+	
 	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
-	Stuff about Animated Bar Graph Generator project</p>
+	So don't you hate when you want to make an awesome animated chart (lake for some word trends over time) and you aren't 
+	familiar with R (yet)? This is a nice little Python script using PIL that will take a data input from a formatted CSV
+	document and convert it to an awesome animated bar graph. Here is a GIF with some random numbers and titles to demonstrate.
+	There isn't a whole lot to talk about on this one, <a href="https://github.com/dbridgem/ABGG"> so here is a github link to the code </a></p>
 </div>
 
 <div class="project">
