--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@ p .project{
 	able to scrape the entirety of the journal archives and  with a few other Python scripts I was able to extract the frequency of different
 	words used over time. What I found was that in earlier years (around 1900), the literature was much more diverse in topics, and 
 	recently we start to see the same popular terms. It's not really a surprise when you think about it, but still interesting.
-	Here is an animated plot showing some of the top terms over time. <a href="/nature_scraper"> Click here to read more </a></p>
+	Here is an animated plot showing some of the top terms over time. <a href="/nature_scraper"> Click here to read more. </a></p>
 	
 </div>
 
@@ -53,7 +53,7 @@ p .project{
 	have a trained convolutional neural net determine which (if any) of the sensors should be discarded based on visible defects. 
 	To make this, I started with a simple script to ensure the photos were all the in the right orientation, divided the photots
 	into 16 areas (1 area per sensor), let a user select if the sensor passed or failed qc in a window (tkinter) to generate 
-	class labels, then ran a convolutional neural net to predict pass or fail based on image alone. <a href="/CNN"> Click here to read more </a></p>
+	class labels, then ran a convolutional neural net to predict pass or fail based on image alone. <a href="/CNN"> Click here to read more. </a></p>
 </div>
 
 <div class="project">
@@ -63,7 +63,7 @@ p .project{
 	So don't you hate when you want to make an awesome animated chart (lake for some word trends over time) and you aren't 
 	familiar with R (yet)? This is a nice little Python script using PIL that will take a data input from a formatted CSV
 	document and convert it to an awesome animated bar graph. Here is a GIF with some random numbers and titles to demonstrate.
-	There isn't a whole lot to talk about on this one, <a href="https://github.com/dbridgem/ABGG"> so here is a github link to the code </a></p>
+	There isn't a whole lot to talk about on this one, <a href="https://github.com/dbridgem/ABGG"> so here is a github link to the code. </a></p>
 </div>
 
 <div class="project">
@@ -74,5 +74,5 @@ p .project{
 	if the sensor experiences movement (like you would expect in a wearable device). Since we have a one-way valve, we know that when
 	the person is inhaling that we are at baseline. The question is: How do we determine when the person is inhaling? We had an algorithm
 	developed for a microcontroller but we wanted to ensure it was working properly, so this algorithm uses Python to generate a reference
-	for accurate assessment of baseline vs. exhalation breathing. <a href="/baseline_tracking>Click here to read more.</a></p>
+	for accurate assessment of baseline vs. exhalation breathing. <a href="/baseline_tracking> Click here to read more. </a></p>
 </div>
