--- a/projects/index.html
+++ b/projects/index.html
@@ -74,5 +74,5 @@ p .project{
 	if the sensor experiences movement (like you would expect in a wearable device). Since we have a one-way valve, we know that when
 	the person is inhaling that we are at baseline. The question is: How do we determine when the person is inhaling? We had an algorithm
 	developed for a microcontroller but we wanted to ensure it was working properly, so this algorithm uses Python to generate a reference
-	for accurate assessment of baseline vs. exhalation breathing. <a href="/baseline_tracking> Click here to read more. </a></p>
+	for accurate assessment of baseline vs. exhalation breathing. <a href="/baseline_tracking"> Click here to read more. </a></p>
 </div>
