--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -6,3 +6,10 @@ title: Devon Bridgeman
 	<h1>Nature Scraping</h1>
 	<p>Exploring trends in scientific literature</a></p>
 </div><!-- /.blurb -->
+
+<div class="finding">
+	<h2>
+		Letter titles have gotten longer over time.
+	</h2>
+	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+</div>
