--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -11,7 +11,17 @@ title: Devon Bridgeman
 	<h2>
 		Letter titles have gotten longer over time.
 	</h2>
-	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
 		If we look at the average length of a title over time from published Letters, we can see a fairly steady increase from 
 		about 4 words per title in ----DATE---- to almost 11 words per title in ----DATE----, when it stopped increasing.
 </div>
+
+<div class="finding">
+	<h2>
+		Letter titles have gotten longer over time.
+	</h2>
+	<p><img style = "padding: 0 15px; float: left;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+		If we look at the average length of a title over time from published Letters, we can see a fairly steady increase from 
+		about 4 words per title in ----DATE---- to almost 11 words per title in ----DATE----, when it stopped increasing.
+</div>
+
