--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -9,6 +9,18 @@ title: Devon Bridgeman
 
 <div class="finding">
 	<h2>
+		Certain words have become much more polular
+	</h2>
+	<iframe width="300" height="300" style="padding: 0 15px; float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+	</iframe>
+
+	<p>	From this animated bar graph showing the most popular words over time, I found a few things interesting. First, you can see 
+		that over time there are a few words that become popular and remain popular. Second, you can see that the most popular terms
+		rotate very quickly towards the beginning of the publication, and later they stabilize a fair bit. 
+</div>
+
+<div class="finding">
+	<h2>
 		Letter titles have gotten longer over time.
 	</h2>
 	<p><img style = "padding: 0 15px; float: left;" img src = "Title_length.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
@@ -16,3 +28,12 @@ title: Devon Bridgeman
 		about 4 words per title in 1874 to almost 11 words per title in 1984, when it stopped increasing.
 </div>
 
+<div class="finding">
+	<h2>
+		Nature doesn't publish many more Letters now that in the late 1800's
+	</h2>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Num_Letters.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
+		Looking at the volume of Letters that Nature published over time, we are currently seeing a long decrease, where we might 
+		even expect to see a lower rate in the near future than we did in the late 1800's. There is quite an increase from 1920 to 1960,
+		then a spike and peak in the 1960's.
+</div>
