--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -23,7 +23,7 @@ title: Devon Bridgeman
 	<h2>
 		Letter titles have gotten longer over time.
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Title_length.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Title_Length.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
 		If we look at the average length of a title over time from published Letters, we can see a fairly steady increase from 
 		about 4 words per title in 1874 to almost 11 words per title in 1984, when it stopped increasing.
 </div>
