--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -32,7 +32,7 @@ title: Devon Bridgeman
 	<h2>
 		Nature doesn't publish many more Letters now than in the late 1800's
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Num_Letters.jpg" alt ="Image_Placeholder.png" />
+	<p><img style = "padding: 0 15px; float: left;" img src = "Num_Letters.jpg" alt ="Image_Placeholder.png"  height = 300 width = 300/>
 		Looking at the volume of Letters that Nature published over time, we are currently seeing a long decrease, where we might 
 		even expect to see a lower rate in the near future than we did in the late 1800's. There is quite an increase from 1920 to 1960,
 		then a spike and peak in the 1960's.
