--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -4,7 +4,11 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Nature Scraping</h1>
-	<p>Exploring trends in scientific literature</a></p>
+	<p>To see the actual code used, you can go to <a href="https://github.com/dbridgem/Nature-Scrape">my Github page</a>. What I
+		did was use Beatiful Soup 4 to scrape Nature's journal archives, then extracted single tokens from the titles
+		of publications from their "Letters" selection in 5 year windows to explore a bit. It was all done in Python
+		with exception of the static plots below, where I've got a few insights extracted from the data.
+	</p>
 </div><!-- /.blurb -->
 
 <div class="finding">
