--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -41,3 +41,13 @@ title: Devon Bridgeman
 		even expect to see a lower rate in the near future than we did in the late 1800's. There is quite an increase from 1920 to 1960,
 		then a spike and peak in the 1960's.
 </div>
+
+<div class="finding">
+	<h2>
+		There is a fairly consistent trend between the number of words and number of unique words
+	</h2>
+	<p><img style = "padding: 0 15px; float: left;" img src = "WordsVUniquewords.jpg" alt ="Image_Placeholder.png"  height = 300 width = 300/>
+		If we look at the total number of words from Nature Letters in a 5 year window, it correlates fairly well. Since we don't
+		see much variance in the trend, it probably isn't changing too much over time. As we start to get more and more words 
+		we do get a few less unique words per word published in a title, although it doesn't seem to be all that big of effect.
+</div>
