--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -34,7 +34,7 @@ title: Devon Bridgeman
 
 <div class="finding">
 	<h2>
-		Nature doesn't publish many more Letters now than in the late 1800's
+		Nature doesn't publish many more Letters now than they did in the late 1800's
 	</h2>
 	<p><img style = "padding: 0 15px; float: left;" img src = "Num_Letters.jpg" alt ="Image_Placeholder.png"  height = 300 width = 300/>
 		Looking at the volume of Letters that Nature published over time, we are currently seeing a long decrease, where we might 
