--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -13,7 +13,7 @@ title: Devon Bridgeman
 
 <div class="finding">
 	<h2>
-		Certain words have become much more polular
+		Certain words have become much more popular
 	</h2>
 	<iframe width="300" height="300" style="padding: 0 15px; float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 	</iframe>
