--- a/projects/index.html
+++ b/projects/index.html
@@ -2,28 +2,6 @@
 layout: default
 title: Devon Bridgeman
 ---
-<style>
-	
-div .project{
-  border: 3px solid #4CAF50;
-  padding: 5px;
-  margin: 10px;
-}	
-	
-.project {
-  overflow: auto;
-}
-
-p .project{
-   margin-style = top-middle;
-   flex: 1;
-   white-space: nowrap;
-   width: 500px; 
-   height: 300px;
-   overflow: hidden;
-   text-overflow: ellipsis; 	
-}
-</style>
 
 <div class="blurb">
 	<h1>Projects</h1>
@@ -53,7 +31,7 @@ p .project{
 	have a trained convolutional neural net determine which (if any) of the sensors should be discarded based on visible defects. 
 	To make this, I started with a simple script to ensure the photos were all the in the right orientation, divided the photots
 	into 16 areas (1 area per sensor), let a user select if the sensor passed or failed qc in a window (tkinter) to generate 
-	class labels, then ran a convolutional neural net to predict pass or fail based on image alone. <a href="/CNN"> Click here to read more. </a></p>
+	class labels, then ran a convolutional neural net to predict pass or fail based on image alone. <a href="/projects/CNN"> Click here to read more. </a></p>
 </div>
 
 <div class="project">
