--- a/resume/index.html
+++ b/resume/index.html
@@ -6,3 +6,6 @@ title: Devon Bridgeman
 	<h1>Devon Bridgeman</h1>
 	<p>Data Scientist</a></p>
 </div><!-- /.blurb -->
+
+
+<embed src="RESUME PLACEHOLDER.pdf" type="application/pdf" width="100%" height="600px" />
