--- a/resume/index.html
+++ b/resume/index.html
@@ -8,4 +8,4 @@ title: Devon Bridgeman
 </div><!-- /.blurb -->
 
 
-<embed src="RESUME PLACEHOLDER.pdf" type="application/pdf" width="100%" height="600px" />
+<embed src="/resume/RESUME PLACEHOLDER.pdf" type="application/pdf" width="100%" height="600px" />
