--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Devon Bridgeman</h1>
-	<p>Data Scientist</a></p>
+	<p><a href="/resume/RESUME PLACEHOLDER.pdf">Click here to download a copy</a></p>
 </div><!-- /.blurb -->
 
 
