--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Devon Bridgeman
 ---
 <div class="blurb">
-	<h1>Devon Bridgeman</h1>
+	<h1>Resume</h1>
 	<p><a href="/resume/RESUME PLACEHOLDER.pdf">Click here for download/printer friendly view</a></p>
 </div><!-- /.blurb -->
 
