--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@ layout: default
 title: Devon Bridgeman
 ---
 <div class="blurb">
-	<h1>Devon Bridgeman</h1>
-	<p>Data Scientist</a></p>
+	<h1>About Me</h1>
+	<p>	I'm currently a Doctor of Chemical Engineering working at a<a href="http://breezing.com/"> small startup</a> in the Phoenix area. I earned my Bachelor's
+		and Doctor of Philosophy in Chemical Engineering at Arizona State University, then took a position at TF Health Corporation
+		developing sensors to guide health-related lifestyle decisions. The flagship product of TF Health Co. is the Breezing Tracker,
+		which is a breath-based device that utilizes <a href="https://en.wikipedia.org/wiki/Indirect_calorimetry">indirect calorimetry</a> 
+		to measure metabolism.
+		
+	</p>
+
 </div><!-- /.blurb -->
