--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>About Me</h1>
-	<p>	I'm currently a Doctor of Chemical Engineering working at a<a href="http://breezing.com/"> small startup</a> in the Phoenix area. I earned my Bachelor's
-		and Doctor of Philosophy in Chemical Engineering at Arizona State University, then took a position at TF Health Corporation
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;
+		I'm currently a Doctor of Chemical Engineering working at a<a href="http://breezing.com/"> small startup in the Phoenix area</a>. 
+		I earned my Bachelor's and Doctorate of Philosophy in Chemical Engineering at Arizona State University, then took a position at TF Health Corporation
 		developing sensors to guide health-related lifestyle decisions. The flagship product of TF Health Co. is the Breezing Tracker,
 		which is a breath-based device that utilizes <a href="https://en.wikipedia.org/wiki/Indirect_calorimetry">indirect calorimetry</a> 
-		to measure metabolism.
+		to measure metabolism.</p>
+	
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;
+		I started at ASU in 2009 with my undergraduate, and started actual lab work in 2012 as a volunteer. After a few months I 
+		was offered a position, which is when I started working a fair bit with data in Matlab. After I graduated, I started as
+		a Research Assistant in my PhD.. During my PhD. I worked on several projects, with my dissertation being on developing an 
+		inexpensive carbon dioxide colorimetric sensor. This project was mostly building a model to account for temperature, moisture, 
+		and carbon dioxide in a sensor system where none of these things could actually be measured all that well. </p>
 		
-	</p>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;
+		After I graduated, I started working at TF Health Corporation, where I worked to develop the second generation of their 
+		flagship product. This is when I started to branch out: At this point I'm proficient with Python, SQL, Matlab, R, HTML5, C, 
+		and others. This is also when I started to apply more machine learning techniques. At this point I am proficient with 
+		most common machine learning techniques: linear regression, logistic regression, decision trees / random forests, support 
+		vector machines and regressions, artificial neural nets, nearest neighbor classification (KNN), and many more. </p>
+	
+	<p>I am a capable data scientist looking for my next challenge. For more detail on some related projects see the project page above 
+		or take a look at my resume. Thanks for stopping by.</p>
 
 </div><!-- /.blurb -->
