--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@ title: Devon Bridgeman
 
 <div class="project">
 	<h2>CNN for Sensor Quality Control</h2>
-	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: right;" img src = "CNN_Summary.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	So the company I work for manufactures color-based sensors, and we want to find a better way to determine if a sensor is
 	good or bad. The way these sensors are manufactured is in sheets of 16 sensors, so the idea is that we can snap a picture and
 	have a trained convolutional neural net determine which (if any) of the sensors should be discarded based on visible defects. 
