--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@ title: Devon Bridgeman
 <div class="project">
 	<h2>Animated Bar Graph Generator</h2>
 	
-	<p><img style = "padding: 0 15px; float: left;" img src = "Animated Bar Graph.gif" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Animated Bar Graph.gif" alt ="Image_Placeholder.png" height = 300 width = 300 clip: rect(0px,300px,300px,0px);/>
 	So don't you hate when you want to make an awesome animated chart (lake for some word trends over time) and you aren't 
 	familiar with R (yet)? This is a nice little Python script using PIL that will take a data input from a formatted CSV
 	document and convert it to an awesome animated bar graph. Here is a GIF with some random numbers and titles to demonstrate.
