--- a/projects/index.html
+++ b/projects/index.html
@@ -46,7 +46,7 @@ title: Devon Bridgeman
 
 <div class="project">
 	<h2>Baseline Tracking Comparison</h2>
-	<p><img style = "padding: 0 15px; float: right;" img src = "300.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: right;" img src = "Baseline_Summary.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
 	So at the company I work for we do breath analysis in wearable devices. An issue with flow in particular is how we measure it, which is with 
 	a differential pressure flow meter. The issue with this type of sensor is that it can have issues with baseline drift, especially 
 	if the sensor experiences movement (like you would expect in a wearable device). Since we have a one-way valve, we know that when
