--- a/projects/CNN/index.html
+++ b/projects/CNN/index.html
@@ -3,21 +3,21 @@ layout: default
 title: Devon Bridgeman
 ---
 <div class="blurb">
-	<h1>Nature Scraping</h1>
-	<p>To see the actual code used, you can go to <a href="https://github.com/dbridgem/Nature-Scrape">my Github page</a>. What I
-		did was use Beatiful Soup 4 to scrape Nature's journal archives, then extracted single tokens from the titles
-		of publications from their "Letters" selection in 5 year windows to explore a bit. It was all done in Python
-		with exception of the static plots below, where I've got a few insights extracted from the data.
-	</p>
+	<h1>Convolutional Neural Net</h1>
+
 </div><!-- /.blurb -->
 
 <div class="finding">
 	<h2>
 		Why did I look at this?
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Title_Length.jpg" alt ="Image_Placeholder.png" height = 300 width = 300/>
-		If we look at the average length of a title over time from published Letters, we can see a fairly steady increase from 
-		about 4 words per title in 1874 to almost 11 words per title in 1984, when it stopped increasing.
+	<p><img style = "padding: 0 15px; float: left;" img src = "Sensor Image.png" alt ="Image_Placeholder.png" height = 300 width = 300/>
+		The flagship technology at my current company is color-based breath sensing. Basically, you breath in the device, 
+		the sensor reacts with the O2 and CO2 in your breath, and we look at the color change due to the reaction. The way 
+		we manufacture these color-based sensors is by depositing these chemicals on a plastic substrate. Since the chemicals 
+		are colored, this makes visual or imaging-based systems ideal for finding sensors that do not meet our standards. 
+		Currently, this is all done visually by an operator; however we want to have a method that is not dependent on the 
+		operator and can be easily scaled. For this, a camera with a convolutional neural net is a great candidate.
 </div>
 
 <div class="finding">
