--- a/projects/CNN/index.html
+++ b/projects/CNN/index.html
@@ -26,7 +26,7 @@ title: Devon Bridgeman
 		Getting images
 	</h2>
 
-	<p><img style = "padding: 0 15px; float: left;" img src = "Plate_Image.jpg" alt ="Plate_Image" height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Plate_Image.JPG" alt ="Plate_Image" height = 300 width = 300/>
 		So the first step is, of course, to get some pictures. In order to do this I was able to build a small photo booth using 
 		high precision laser cutting, heat welding, and structured materials (a laser cut cardboard box hot-glued together) to hold 
 		a plate of sensors and ipod in a reproducible position without outside light. 
