--- a/projects/CNN/index.html
+++ b/projects/CNN/index.html
@@ -50,7 +50,7 @@ title: Devon Bridgeman
 	<h2>
 		Classifying the images
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Tkinker_UI.jpg" alt ="tkinker_UI"  height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Tkinter_UI.jpg" alt ="tkinker_UI"  height = 300 width = 300/>
 		This was the fun part. This stack ended up having roughly 750 images in it, and they need to be manually classified in order 
 		to train the neural net: This is usually where you might want an intern. In order to make the process as painless as possible, 
 		I built a simple interface in Tkinter that allows for simple sorting. The images show up inverted in the viewing window in 
