--- a/projects/CNN/index.html
+++ b/projects/CNN/index.html
@@ -4,6 +4,8 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Convolutional Neural Net</h1>
+	<p>Here is a brief summary on a Convolutional Neural Net project I made. <a href="https://github.com/dbridgem/Sensor_CNN">Click 
+		here to see the Github page.</a></p>
 
 </div><!-- /.blurb -->
 
@@ -62,10 +64,9 @@ title: Devon Bridgeman
 	<h2>
 		Running the CNN
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Num_Letters.jpg" alt ="Image_Placeholder.png"  height = 300 width = 300/>
-		Looking at the volume of Letters that Nature published over time, we are currently seeing a long decrease, where we might 
-		even expect to see a lower rate in the near future than we did in the late 1800's. There is quite an increase from 1920 to 1960,
-		then a spike and peak in the 1960's.
+	<p><img style = "padding: 0 15px; float: left;" img src = "CNN_console.jpg" alt ="CNN_console"  height = 300 width = 300/>
+		The CNN itself was a fairly standard 9-layer neural net. Convergence happened fairly quickly without converging on too 
+		high of an accuracy.
 </div>
 
 <div class="finding">
