--- a/resume/index.html
+++ b/resume/index.html
@@ -4,8 +4,8 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Resume</h1>
-	<p><a href="/resume/RESUME PLACEHOLDER.pdf">Click here for download/printer friendly view</a></p>
+	<p><a href="/resume/Resume_Devon Bridgeman.pdf">Click here for download/printer friendly view</a></p>
 </div><!-- /.blurb -->
 
 
-<embed src="/resume/RESUME PLACEHOLDER.pdf" type="application/pdf" width="100%" height="600px" />
+<embed src="/resume/Resume_Devon Bridgeman.pdf" type="application/pdf" width="100%" height="600px" />
